tests/errors/type-error-size.ja
procedure main()
    int x
    stack a
    int b[3]
    int c
    x += size(a)
    x += size(b)
    x += size(c)
 
